[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getstripeproducts"
version = "0.0.1"
authors = [
  { name="Hassan", email="hassan.numl2013@gmail.com" },
]
description = "A Package for downloading products from stripe account using stripe API secret Key"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["stripe"]
[project.urls]
"Homepage" = "https://github.com/pypa/getstripeproducts"
"Bug Tracker" = "https://github.com/pypa/getstripeproducts/issues"